--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: spring-boot-app
+          name: slack.cab-0.0.1-SNAPSHOT
           path: .
 
       - name: Set up SSH key
