--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: spring-boot-app
+          name: slack.cab-0.0.1-SNAPSHOT
           path: target/*.jar
 
   deploy:
