--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,18 +1,18 @@
-name: CI/CD for Spring Boot
+name: CI/CD Pipeline
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Java
+      - name: Setup Java 21
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
@@ -21,43 +21,38 @@ jobs:
       - name: Build with Maven
         run: mvn clean package -DskipTests
 
-      - name: List files in target directory
-        run: ls -al target/
-
-      - name: Upload artifact
+      - name: Upload JAR
         uses: actions/upload-artifact@v4
         with:
-          name: spring-boot-app
-          path: target/*.jar
+          name: app-jar
+          path: target/slack.cab-0.0.1-SNAPSHOT.jar
 
   deploy:
-    runs-on: ubuntu-latest
+    name: Deploy
     needs: build
-
+    runs-on: ubuntu-latest
     steps:
-      - name: Download artifact
+      - name: Download JAR artifact
         uses: actions/download-artifact@v4
         with:
-          name: spring-boot-app
-          path: .
+          name: app-jar
+          path: target/
 
-      - name: Set up SSH key
+      - name: Setup SSH key
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.SERVER_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
       - name: Add server to known_hosts
-        run: |
-          ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
+        run: ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Deploy to server
-        run: |
-          scp target/slack.cab-0.0.1-SNAPSHOT.jar ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:/home/${{ secrets.SERVER_USER }}/app.jar
+      - name: Copy JAR to server
+        run: scp -o StrictHostKeyChecking=no target/slack.cab-0.0.1-SNAPSHOT.jar ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:/home/${{ secrets.SERVER_USER }}/deployment/
 
-      - name: Restart app
+      - name: Restart application on server
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
-            pkill -f 'java -jar' || true
-            nohup java -jar /home/${{ secrets.SERVER_USER }}/app.jar > app.log 2>&1 &
+            pkill -f "slack.cab-0.0.1-SNAPSHOT.jar" || true
+            nohup java -jar /home/${{ secrets.SERVER_USER }}/deployment/slack.cab-0.0.1-SNAPSHOT.jar > app.log 2>&1 &
           EOF
