--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,21 +38,31 @@ jobs:
           name: app-jar
           path: target/
 
-      - name: Setup SSH key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SERVER_SSH_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
+      # Sử dụng ssh-agent action thay vì tự cấu hình SSH
+      - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.8.0
+        with:
+          ssh-private-key: ${{ secrets.SERVER_SSH_KEY }}
 
+      # Thêm server vào known_hosts
       - name: Add server to known_hosts
         run: ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Copy JAR to server
-        run: scp -o StrictHostKeyChecking=no target/slack.cab-0.0.1-SNAPSHOT.jar ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:/home/${{ secrets.SERVER_USER }}/deployment/
+      # Kiểm tra kết nối SSH đến server
+      - name: Check SSH connection
+        run: ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} "echo Connection successful"
 
+      # Sao chép file JAR
+      - name: Copy JAR to server
+        run: scp target/slack.cab-0.0.1-SNAPSHOT.jar ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:/home/${{ secrets.SERVER_USER }}/deployment/
+
+      # Khởi động lại ứng dụng
       - name: Restart application on server
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+          ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+            mkdir -p /home/${{ secrets.SERVER_USER }}/deployment
             pkill -f "slack.cab-0.0.1-SNAPSHOT.jar" || true
-            nohup java -jar /home/${{ secrets.SERVER_USER }}/deployment/slack.cab-0.0.1-SNAPSHOT.jar > app.log 2>&1 &
+            cd /home/${{ secrets.SERVER_USER }}/deployment
+            nohup java -jar slack.cab-0.0.1-SNAPSHOT.jar > app.log 2>&1 &
+            echo "Application restarted"
           EOF
