--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,6 +21,16 @@ jobs:
       - name: Build with Maven
         run: mvn clean package -DskipTests
 
+      # Thêm bước kiểm tra file JAR
+      - name: Check if JAR exists
+        run: |
+          if [ -f "target/slack.cab-0.0.1-SNAPSHOT.jar" ]; then
+            echo "JAR file exists"
+          else
+            echo "JAR file not found"
+            exit 1
+          fi
+
       - name: Upload JAR
         uses: actions/upload-artifact@v4
         with:
