--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,7 +21,9 @@ jobs:
       - name: Build with Maven
         run: mvn clean package -DskipTests
 
-      # Thêm bước kiểm tra file JAR
+      - name: List target directory
+        run: ls -la target/
+
       - name: Check if JAR exists
         run: |
           if [ -f "target/slack.cab-0.0.1-SNAPSHOT.jar" ]; then
