--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -66,7 +66,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: app-jar
-          path: target/
+          path: target/slack.cab-0.0.1-SNAPSHOT.jar
 
       - name: Setup SSH key
         run: |
