--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=slack.cab
-
+server.port=8080
+server.address=0.0.0.0
 gemini.api.key=AIzaSyCWqnFnv2otNClRhFtLsStV7s8VuE9B_e8
 gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent
