--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -139,26 +139,26 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{  EC2_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{  EC2_HOST }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{  secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
       - name: Create deployment directory
-        run: ssh ${{  EC2_USER  }}@${{  EC2_HOST }} "mkdir -p /home/${{  EC2_USER  }}/deployment/dev"
+        run: ssh ${{  secrets.EC2_USER  }}@${{  secrets.EC2_HOST }} "mkdir -p /home/${{  secrets.EC2_USER  }}/deployment/dev"
 
       - name: Check directory permissions
-        run: ssh ${{  EC2_USER  }}@${{  EC2_HOST }} "ls -la /home/${{  EC2_USER  }}/deployment/ | grep dev"
+        run: ssh ${{  secrets.EC2_USER  }}@${{  secrets.EC2_HOST }} "ls -la /home/${{  secrets.EC2_USER  }}/deployment/ | grep dev"
 
       - name: Copy JAR to server
-        run: scp target/slack.cab-0.0.1-SNAPSHOT.jar ${{  EC2_USER  }}@${{  EC2_HOST }}:/home/${{  EC2_USER  }}/deployment/dev/
+        run: scp target/slack.cab-0.0.1-SNAPSHOT.jar ${{  secrets.EC2_USER  }}@${{  secrets.EC2_HOST }}:/home/${{  secrets.EC2_USER  }}/deployment/dev/
 
       - name: Deploy and start application on server
         run: |
-          ssh ${{  EC2_USER  }}@${{  EC2_HOST }} << 'EOF'
+          ssh ${{  secrets.EC2_USER  }}@${{  secrets.EC2_HOST }} << 'EOF'
             # Stop any existing application
             pkill -f "slack.cab-0.0.1-SNAPSHOT.jar.*8080" || true
             echo "Stopped any existing DEV application"
 
             # Change to deployment directory
-            cd /home/${{  EC2_USER  }}/deployment/dev
+            cd /home/${{  secrets.EC2_USER  }}/deployment/dev
 
             # Start the application
             nohup java -jar slack.cab-0.0.1-SNAPSHOT.jar --server.port=8080 > app.log 2>&1 &
@@ -228,26 +228,26 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{  EC2_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{  EC2_HOST }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{  secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
       - name: Create deployment directory
-        run: ssh ${{  EC2_USER  }}@${{  EC2_HOST }} "mkdir -p /home/${{  EC2_USER  }}/deployment/sit"
+        run: ssh ${{  secrets.EC2_USER  }}@${{  secrets.EC2_HOST }} "mkdir -p /home/${{  secrets.EC2_USER  }}/deployment/sit"
 
       - name: Check directory permissions
-        run: ssh ${{ EC2_USER }}@${{  EC2_HOST }} "ls -la /home/${{  EC2_USER  }}/deployment/ | grep sit"
+        run: ssh ${{ secrets.EC2_USER }}@${{  secrets.EC2_HOST }} "ls -la /home/${{  secrets.EC2_USER  }}/deployment/ | grep sit"
 
       - name: Copy JAR to server
-        run: scp target/slack.cab-0.0.1-SNAPSHOT.jar ${{  EC2_USER  }}@${{  EC2_HOST }}:/home/${{  EC2_USER  }}/deployment/sit/
+        run: scp target/slack.cab-0.0.1-SNAPSHOT.jar ${{  secrets.EC2_USER  }}@${{  secrets.EC2_HOST }}:/home/${{  secrets.EC2_USER  }}/deployment/sit/
 
       - name: Deploy and start application on server
         run: |
-          ssh ${{  EC2_USER  }}@${{  EC2_HOST }} << 'EOF'
+          ssh ${{  secrets.EC2_USER  }}@${{  secrets.EC2_HOST }} << 'EOF'
             # Stop any existing application
             pkill -f "slack.cab-0.0.1-SNAPSHOT.jar.*8081" || true
             echo "Stopped any existing SIT application"
 
             # Change to deployment directory
-            cd /home/${{  EC2_USER  }}/deployment/sit
+            cd /home/${{  secrets.EC2_USER  }}/deployment/sit
 
             # Start the application
             nohup java -jar slack.cab-0.0.1-SNAPSHOT.jar --server.port=8081 > app.log 2>&1 &
@@ -318,26 +318,26 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{  EC2_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{  EC2_HOST }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{  secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
       - name: Create deployment directory
-        run: ssh ${{  EC2_USER  }}@${{  EC2_HOST }} "mkdir -p /home/${{  EC2_USER  }}/deployment/stg"
+        run: ssh ${{  secrets.EC2_USER  }}@${{  secrets.EC2_HOST }} "mkdir -p /home/${{  secrets.EC2_USER  }}/deployment/stg"
 
       - name: Check directory permissions
-        run: ssh ${{  EC2_USER  }}@${{  EC2_HOST }} "ls -la /home/${{  EC2_USER  }}/deployment/ | grep stg"
+        run: ssh ${{  secrets.EC2_USER  }}@${{  secrets.EC2_HOST }} "ls -la /home/${{  secrets.EC2_USER  }}/deployment/ | grep stg"
 
       - name: Copy JAR to server
-        run: scp target/slack.cab-0.0.1-SNAPSHOT.jar ${{  EC2_USER  }}@${{  EC2_HOST }}:/home/${{  EC2_USER  }}/deployment/stg/
+        run: scp target/slack.cab-0.0.1-SNAPSHOT.jar ${{  secrets.EC2_USER  }}@${{  secrets.EC2_HOST }}:/home/${{  secrets.EC2_USER  }}/deployment/stg/
 
       - name: Deploy and start application on server
         run: |
-          ssh ${{  EC2_USER  }}@${{  EC2_HOST }} << 'EOF'
+          ssh ${{  secrets.EC2_USER  }}@${{  secrets.EC2_HOST }} << 'EOF'
             # Stop any existing application
             pkill -f "slack.cab-0.0.1-SNAPSHOT.jar.*8082" || true
             echo "Stopped any existing STG application"
 
             # Change to deployment directory
-            cd /home/${{  EC2_USER  }}/deployment/stg
+            cd /home/${{  secrets.EC2_USER  }}/deployment/stg
 
             # Start the application
             nohup java -jar slack.cab-0.0.1-SNAPSHOT.jar --server.port=8082 > app.log 2>&1 &
@@ -406,28 +406,28 @@ jobs:
       - name: Setup SSH key
         run: |
           mkdir -p ~/.ssh
-          echo "${{  EC2_KEY }}" > ~/.ssh/id_rsa
+          echo "${{  secrets.EC2_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{  EC2_HOST }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{  secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
       - name: Create deployment directory
-        run: ssh ${{  EC2_USER  }}@${{  EC2_HOST }} "mkdir -p /home/${{  EC2_USER  }}/deployment/prod"
+        run: ssh ${{  secrets.EC2_USER  }}@${{  secrets.EC2_HOST }} "mkdir -p /home/${{  secrets.EC2_USER  }}/deployment/prod"
 
       - name: Check directory permissions
-        run: ssh ${{  EC2_USER  }}@${{  EC2_HOST }} "ls -la /home/${{  EC2_USER  }}/deployment/ | grep prod"
+        run: ssh ${{  secrets.EC2_USER  }}@${{  secrets.EC2_HOST }} "ls -la /home/${{  secrets.EC2_USER  }}/deployment/ | grep prod"
 
       - name: Copy JAR to server
-        run: scp target/slack.cab-0.0.1-SNAPSHOT.jar ${{  EC2_USER  }}@${{  EC2_HOST }}:/home/${{  EC2_USER  }}/deployment/prod/
+        run: scp target/slack.cab-0.0.1-SNAPSHOT.jar ${{  secrets.EC2_USER  }}@${{  secrets.EC2_HOST }}:/home/${{  secrets.EC2_USER  }}/deployment/prod/
 
       - name: Deploy and start application on server
         run: |
-          ssh ${{  EC2_USER  }}@${{  EC2_HOST }} << 'EOF'
+          ssh ${{  secrets.EC2_USER  }}@${{  secrets.EC2_HOST }} << 'EOF'
             # Stop any existing application
             pkill -f "slack.cab-0.0.1-SNAPSHOT.jar.*8083" || true
             echo "Stopped any existing PROD application"
 
             # Change to deployment directory
-            cd /home/${{  EC2_USER  }}/deployment/prod
+            cd /home/${{  secrets.EC2_USER  }}/deployment/prod
 
             # Start the application
             nohup java -jar slack.cab-0.0.1-SNAPSHOT.jar --server.port=8083 > app.log 2>&1 &
