--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,6 @@ version: 0.2
 # Environment variables
 env:
   variables:
-    JAVA_HOME: "/usr/lib/jvm/java-21-openjdk-amd64"
     MAVEN_OPTS: "-Dmaven.repo.local=/root/.m2/repository"
 
 # Build phases
@@ -13,6 +12,9 @@ phases:
       java: corretto21
     commands:
       - echo "Installing dependencies..."
+      - echo "Setting up JAVA_HOME..."
+      - export JAVA_HOME=$JAVA21_HOME
+      - echo "JAVA_HOME is set to $JAVA_HOME"
       - echo "Java version:"
       - java -version
       - echo "Maven version:"
